[package]
name = "rusty-keyrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }

[dependencies.windows]
version = "0.48.0"
features = [
   "Win32_UI_Accessibility",
   "Win32_UI_WindowsAndMessaging",
   "Win32_Foundation"
]
